# chd-esp32-s3-box-idf-learning

./: .gitignore  README.md
01_gpio_led/: CMakeLists.txt
01_gpio_led/main/: main.c
02_lcd_hello/: CMakeLists.txt  README.md
02_lcd_hello/main/: CMakeLists.txt  main.c
02_lcd_hello/main/lcd/: lcd.c  lcd.h
03_network_time_weather/: CMakeLists.txt  README.md  sdkconfig.defaults
03_network_time_weather/main/: CMakeLists.txt  main.c  private_config.example.h
03_network_time_weather/main/lcd/: lcd.c  lcd.h
03_network_time_weather/main/network/: network.c  network.h
03_network_time_weather/main/weather/: weather.c  weather.h
04_lvgl_weather_dashboard/: .clangd  CMakeLists.txt  README.md  sdkconfig.defaults
04_lvgl_weather_dashboard/main/: CMakeLists.txt  main.c  private_config.example.h
04_lvgl_weather_dashboard/main/display/: lcd_lvgl.c  lcd_lvgl.h
04_lvgl_weather_dashboard/main/network/: network.c  network.h
04_lvgl_weather_dashboard/main/ui/: dashboard.c  dashboard.h  weather_cn_font.c
04_lvgl_weather_dashboard/main/weather/: weather.c  weather.h
05_lvgl_interactive_dashboard/: CMakeLists.txt  README.md
05_lvgl_interactive_dashboard/main/: CMakeLists.txt  main.c
05_lvgl_interactive_dashboard/main/display/: lcd_lvgl.c  lcd_lvgl.h
05_lvgl_interactive_dashboard/main/input/: button.c
05_lvgl_interactive_dashboard/main/settings/: settings.c
05_lvgl_interactive_dashboard/main/ui/: dashboard.c  dashboard.h  weather_cn_font.c
06_imu_motion_dashboard/: CMakeLists.txt  README.md
06_imu_motion_dashboard/main/: CMakeLists.txt  idf_component.yml  main.c
06_imu_motion_dashboard/main/bus/: i2c_bus.c  i2c_bus.h
06_imu_motion_dashboard/main/imu/: icm42607.c  icm42607.h  motion.c  motion.h
06_imu_motion_dashboard/main/input/: button.h
06_imu_motion_dashboard/main/settings/: settings.c  settings.h
06_imu_motion_dashboard/main/ui/: dashboard.c  dashboard.h
